// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasicDialog /> should render as expected 1`] = `
<FocusTrap>
  <div
    aria-labelledby="basicDialogTitle basicDialogDesc"
    aria-modal={true}
    className="sg-1at7hhn-container ui-ios__base-dialog"
    data-test-id="basicDialog"
    role="alertdialog"
  >
    <div
      className="sg-1o3pu1m-content"
    >
      <Title
        title="Hello World"
      />
      <Content
        content={
          <div>
            Hello World
          </div>
        }
      />
    </div>
    <div
      className="sg-knc55g-actions"
    >
      <Buttons
        actions={
          [
            {
              "action": [MockFunction],
              "label": "action0",
            },
            {
              "action": [MockFunction],
              "label": "action1",
            },
            {
              "action": [MockFunction],
              "label": "action2",
            },
          ]
        }
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`<BasicDialog /> should render with minimal props 1`] = `
<FocusTrap>
  <div
    aria-labelledby="basicDialogTitle basicDialogDesc"
    aria-modal={true}
    className="sg-1at7hhn-container ui-ios__base-dialog"
    data-test-id="basicDialog"
    role="alertdialog"
  >
    <div
      className="sg-1o3pu1m-content"
    >
      <Title
        title={null}
      />
      <Content
        content={null}
      />
    </div>
    <div
      className="sg-knc55g-actions"
    >
      <Buttons
        actions={[]}
      />
    </div>
  </div>
</FocusTrap>
`;
